// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalInfo component should match snapshot 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969 (50 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;

exports[`PersonalInfo component should match snapshot with other data 1`] = `
<DocumentFragment>
  <h3
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    Personal Info
  </h3>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Gender: 
    </b>
    <span>
      Non-binary
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Birthday: 
    </b>
    <span>
      January 1, 1969
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Deathday: 
    </b>
    <span>
      January 1, 2010 (40 years old)
    </span>
  </div>
  <div
    class="ant-typography css-dev-only-do-not-override-xex5fb"
  >
    <b>
      Place of Birth: 
    </b>
    <span>
      New York, USA
    </span>
  </div>
</DocumentFragment>
`;
